# htr_evaluation

./: .gitignore  README.md  pyproject.toml
data/: 30002027_00016.xml
data/htrflow_json/images/: R0001308_00004.json
htr_evaluation/: __init__.py  cli.py  evaluate.py  htrflow.py  metrics.py  parsers.py
pipelines/: hackathon.yaml
