[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htr-evaluation"
version = "0.1.0"
description = "Evaluate HTR predictions against PAGE XML or ALTO ground truth using CER and BoW metrics"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "HTR Evaluation"}
]
keywords = ["htr", "ocr", "alto", "pagexml", "cer", "evaluation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
htr-eval = "htr_evaluation.cli:main"
htrflow-page-eval = "htr_evaluation.cli:main"

[tool.setuptools]
packages = ["htr_evaluation"]
